--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,21 @@
 body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
+  font-family: 'Courgette', cursive;
+    font-size: 25px;
     line-height: 34px;
-    color: #777777;
+    color: rgb(37, 204, 196);
     background: url("../images/image-of-USA.jpg");
   }
 
   * {
     box-sizing: border-box;
+  }
+  
+  #directions-text {
+    color:rgba(241, 244, 247, 27);
+    font-size: 45px;
+    text-decoration: underline;
+    margin-bottom: 50px;
+
   }
 
   #headerimg {
@@ -17,11 +25,11 @@ body {
         width: 60%;
         height: 168px;
   }
-  h1 p
+p
   {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     width: 42%;
     color: black
 }
